--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "proyecto integrador backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,8 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "patch": "^0.0.1"
